--- a/server.conf
+++ b/server.conf
@@ -1,23 +1,26 @@
 # OpenVPN Server Config
-port 1194            # Port
-proto udp            # Protocol
-dev tun              # Device
+port 1194		# Port
+proto udp		# Protocol
+dev tun			# Device
 
-sndbuf 0             # TCP/UDP socket send buffer size
-rcvbuf 0             # TCP/UDP socket receive buffer size
+sndbuf 0		# TCP/UDP socket send buffer size
+rcvbuf 0		# TCP/UDP socket receive buffer size
 
-ca ca.crt            # ca certificate
-cert server.crt      # server certificate
-key server.key       # server key
-dh dh.pem            # diffie hellman's certificate
-crl-verify crl.pem   # certificate revogation list
-tls-auth ta.key 0    # tls key
+ca ca.crt		# ca certificate
+cert server.crt		# server certificate
+key server.key		# server key
+dh dh.pem		# diffie hellman's certificate
+crl-verify crl.pem	# certificate revogation list
+tls-auth ta.key 0	# tls key
 auth SHA512
 
 topology subnet
 server 10.8.0.0 255.255.255.0
+
 ifconfig-pool-persist ipp.txt
+#route remote_host 255.255.255.255 net_gateway
 #push "redirect-gateway def1 bypass-dhcp"
+#push "redirect-gateway def1"
 
 keepalive 10 120
 cipher AES-256-CBC
