Modify OpenVPN server.conf

--- a/server.conf
+++ b/server.conf
@@ -18,9 +18,6 @@ topology subnet
 server 10.8.0.0 255.255.255.0
 
 ifconfig-pool-persist ipp.txt
-#route remote_host 255.255.255.255 net_gateway
-#push "redirect-gateway def1 bypass-dhcp"
-#push "redirect-gateway def1"
 
 keepalive 10 120
 cipher AES-256-CBC
@@ -33,6 +30,9 @@ persist-key
 persist-tun
 
 client-config-dir ccd 
+# Modify client IP inside dir ccd/client1
+# Example: 
+# ifconfig-push 10.8.0.100 255.255.255.0
 
 status /var/log/openvpn-status.log
 log /var/log/openvpn.log
